export enum NodeType {
  File = 'FILE',
  Sort = 'SORT',
  Filter = 'FILTER',
  Join = 'JOIN',
  Slice = 'SLICE',
  SimpleImputer = 'SIMPLE_IMPUTER',
  MinMaxScaler = 'MIN_MAX_SCALER',
  StandardScaler = 'STANDARD_SCALER',
  OneHotEncoder = 'ONE_HOT_ENCODER',
}
