@startuml
!theme mars
interface Column{
  +name : string
  +type : 'string' | 'number'
}

interface DataFrameRow {
  +[key: string]: any
}

class DataFrame{
  -_rows : DataFrameRow[]
  -_columns : Column[]
  + <<readonly>> columns : Column[]
  + <<readonly>> rows : DataFrameRow[]
  + <<readonly>> count : int
  +fromCSVFile(file: File, rowsLimit?: number): Promise<DataFrame>
  +toCSVFile(): void
  +slice(from: number, to: number): DataFrame
  +sort(by: string, direction?: 'asc' | 'desc'): DataFrame
  +join(dataFrameB: DataFrame, keyA: string, keyB: string, type: JoinType): DataFrame
  +filter(columnName: string, condition: FilterCondition, value?: string): DataFrame
  +simpleImputer(columnName: string, strategy: SimpleImputerStrategy, value?: string): DataFrame
  +minMaxScaler(columnName: string, withMean: boolean, withStd: boolean): DataFrame
  +standardScaler(columnName: string, withMean: boolean, withStd: boolean): DataFrame
  +renameColumns(oldNames: string[], newNames: string[]): DataFrame
  +dropColumns(columns: string[]): DataFrame
}

DataFrame   "1" *--> "0..*" DataFrameRow
DataFrame   "1" *--> "0..*" Column


enum NodeType {
   File
   Sort
   Filter
   Join
   Slice
   SimpleImputer
   MinMaxScaler
   StandardScaler
   RenameColumns
   DropColumns 
}

interface Node<T> {
  id: string
  position: { x: number, y: number }
  data: T
  ...
}

interface DataNode<TAdditionalData> extends Node {
  data: NodeData<TAdditionalData>
  type: NodeType
}

interface NodeData<TAdditionalData> extends TAdditionalData {
  dataFrame?: DataFrame
}

DataNode -- NodeType
DataFrame "0..1" <--o "1..*" DataNode
DataNode "1" *--> "1" NodeData

interface FilterNodeSetting {
  columnName?: string
  condition?: FilterNumberCondition | FilterStringCondition
  value: string
}

interface FilterNodeAdditionalData {
  settings: FilterNodeSetting
}

interface FilterNode {
  type: NodeType.Filter
}

FilterNodeAdditionalData "1" *--> "1" FilterNodeSetting
FilterNode ..|> DataNode
(DataNode, FilterNode ) . FilterNodeAdditionalData: <<bind>> \n TAdditionalData = FilterNodeAdditionalData

@enduml